# scrambleverse.sign

./: Pipfile  pyproject.toml  pytest.ini  requirements-test.txt
scrambleverse/cli/arguments/: __init__.py  _builder.py  _subcommand.py
scrambleverse/sign/: __init__.py  _private_key.py  _public_key.py  _signatures.py  _signer_info.py
scrambleverse/sign/cli/: __main__.py  _parser.py  generate_private_key.py  generate_public_key.py  sign_file.py  verify_file.py  verify_public_key.py
tests/: README.md  __init__.py  test_cli.py  test_integration.py  test_private_key.py  test_public_key.py  test_signatures.py
